# epidemic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmakeparameters.cpp  configuration.h.in  epidemicConfig.h.in
apps/: CMakeLists.txt  main-seir.cpp  main-seir1.cpp  main-seir2.cpp  main-sim-graphics.cpp  main-sim.cpp  main1.cpp  main2.cpp  main3-sfml.cpp  main3.cpp  main4-sfml.cpp  main4.cpp  main_rks.cpp  main_std1.cpp
cmake/: ClangFormat.cmake
docs/: CMakeLists.txt
include/: SEIR.md  Simulation.md  random.hpp  randutils.hpp
include/epidemic1/: SEIR.hpp  SEIRode.hpp
include/epidemic2/: clock.hpp  cluster.hpp  group.hpp  location.hpp  mobility_model.hpp  parameters.hpp  person.hpp  position.hpp  rectangle.hpp  simulation.hpp  world.hpp
include/epidemic3/: CMakeLists.txt  area.hpp  clock.hpp  cluster.hpp  configuration.h  group.hpp  location.hpp  mobility_model.hpp  parameters.hpp  person.hpp  position.hpp  random.hpp  rectangle.hpp  simulation.hpp
include/seir/: seir.hpp  seir1.hpp  seir2.hpp  seir_rks.hpp
include/simulation/: CMakeLists.txt  cluster.hpp  group.hpp  location.hpp  mobility_model.hpp  parameters.hpp  person.hpp  position.hpp  random.hpp  randutils.hpp  rectangle.hpp  simulation.hpp  world.hpp
scripts/: def-sim.sh  quick-build.sh  testing.sh
src/: CMakeLists.txt  SEIR.cpp  SEIRode.cpp  cluster.cpp  group.cpp  location.cpp  mobility_model.cpp  person.cpp  position.cpp  random.cpp  rectangle.cpp  simulation.cpp  world.cpp
src/epidemic1/: CMakeLists.txt  SEIR.cpp  SEIRode.cpp
src/epidemic2/: CMakeLists.txt  cluster.cpp  group.cpp  location.cpp  mobility_model.cpp  person.cpp  position.cpp  rectangle.cpp  simulation.cpp  world.cpp
src/epidemic3/: CMakeLists.txt  area.cpp  clock.cpp  cluster.cpp  group.cpp  location.cpp  mobility_model.cpp  person.cpp  position.cpp  random.cpp  rectangle.cpp  simulation.cpp
src/seir/: CMakeLists.txt  SEIR.cpp  SEIRode.cpp  seir.cpp
src/simulation/: CMakeLists.txt  cluster.cpp  group.cpp  location.cpp  mobility_model.cpp  person.cpp  position.cpp  random.cpp  rectangle.cpp  simulation.cpp  world.cpp
src/simulation/graphics/: CMakeLists.txt  display.cpp  display.hpp
test_build/tests/: seir.t
tests/: CMakeLists.txt  test.cpp  test1.cpp  test2.cpp  test3.cpp  test_main.cpp
